--- a/src/tokens/scss/components/_select.scss
+++ b/src/tokens/scss/components/_select.scss
@@ -9,6 +9,7 @@ $select-padding-block: 1rem; // Padding block del trigger
 $select-padding-inline: 1rem; // Padding inline del trigger
 $select-font-family: "Google Sans Flex", system-ui, sans-serif; // Familia tipográfica
 $select-font-size: 1.125rem; // Tamaño de fuente
+$select-line-height: 1; // Interlineado del trigger
 $select-font-weight: 300; // Peso tipográfico
 $select-color: #111e30; // Color del texto
 $select-bg: #ffffff; // Fondo del trigger
